--- a/Visibility-Visualization/pvcT-Visualization/htmlviews/resourcecentricviewops.html
+++ b/Visibility-Visualization/pvcT-Visualization/htmlviews/resourcecentricviewops.html
@@ -31,7 +31,7 @@
       //Huynh start
       var session_username = sessionStorage.getItem('ss_user_name');
       if(session_username === null){
-      window.location.replace("http://103.22.221.55:3006/login");
+      window.location.replace("http://210.125.84.69:3006/login");
       }
       //Huynh End
       //var boxes = JSON.parse(data);
@@ -41,32 +41,21 @@
       var instanceList    = !{instanceList};
       var serviceList     = !{serviceList};
       var ovsBridgeStatus = !{ovsBridgeStatus};
+	  var DIR             = 'images/';
       var index=0, boxlevel=1, switchlevel=0, instancelevel=0, servicelevel=0;
-      var nodes             = null;
-      var edges             = null;
-      var network           = null;
-      var DIR               = 'images/';
-      var EDGE_LENGTH_MAIN  = 350;
-      var EDGE_LENGTH_SUB   = 150;
-      var BridgeLinkColor = 'GREEN';
-      var BridgeNodeColor = '#3399ff';
-      var LENGTH_SERVER     = 150,
-      LENGTH_SUB = 50,
-      WIDTH_SCALE = 2,
-      GREEN = 'green',
-      RED = '#C5000B',
-      ORANGE = 'orange',
-      //GRAY = '#666666',
-      GRAY = 'gray',
-      BLACK = '#2B1B17';
-      // Called when the Visualization API is loaded.
+      var nodes = null, edges = null, network = null;
+      var EDGE_LENGTH_MAIN  = 350, EDGE_LENGTH_SUB = 150;
+      var BridgeLinkColor = 'GREEN', BridgeNodeColor = '#3399ff';
+      var LENGTH_SERVER = 150, LENGTH_SUB = 50, WIDTH_SCALE = 2, GREEN = 'green', RED = '#C5000B', ORANGE = 'orange', GRAY = 'gray', BLACK = '#2B1B17';
+      
+	  // Called when the Visualization API is loaded.
       function draw() {
       // Create a data table with nodes.
       nodes = [];
       // Create a data table with links.
       edges = [];
       //Add network Node
-	  nodes.push({id: 1, label: '                                   TEIN Network                                   ', font: {size: 50, color: '#ffffff'},shape: 'box', color: BridgeNodeColor, level:0, fixed: false, physics:true});
+	  nodes.push({id: 1, label: '                                   Network                                   ', font: {size: 50, color: '#ffffff'},shape: 'box', color: BridgeNodeColor, level:0, fixed: false, physics:true});
       //nodes.push({id: 1, image: DIR + 'tein.png', shape: 'image', level:0, fixed: true, physics:true});
       //nodes.push({id: 1001, x: x, y: y, label: 'Desktop', group: 'desktop', value: 4, fixed: false, physics:false});
       //edges.push({from: 1000, to: 1001, length: EDGE_LENGTH_MAIN, width: WIDTH_SCALE * 6, color: GREEN, label: '0.71 mbps'});
@@ -134,7 +123,7 @@
       {
       switchlevel = boxlevel + 1;
       // Huynh: insert box field
-      nodes.push({id: switchNodeID, label: switchList[j].bridge, box: boxList[i]..boxID, level:switchlevel, group: 'desktop', value: 3, fixed: false, physics:false, color: BridgeNodeColor});
+      nodes.push({id: switchNodeID, label: switchList[j].bridge, box: boxList[i].boxID, level:switchlevel, group: 'desktop', value: 3, fixed: false, physics:false, color: BridgeNodeColor});
       edges.push({from: BoxNodeID, to: switchNodeID, length: EDGE_LENGTH_SUB, color: BridgeLinkColor});
       }
       }
