--- a/Visibility-Visualization/pvcT-Visualization/htmlviews/menu.html
+++ b/Visibility-Visualization/pvcT-Visualization/htmlviews/menu.html
@@ -183,7 +183,7 @@
               <div class="panel-heading" id="panel-heading-id">Resource-centric Topological View</div>
               <div class="panel-body">
                 <p>
-                  <iframe id="topoIframe" src="http://210.125.84.69:3006/resourcecentricviewops" width="100%" height="60%"></iframe>
+                  <iframe id="topoIframe" src="http://210.125.84.69:3006/resourcecentricviewops" width="1560" height="600"></iframe>
                 </p>
               </div>
             </div>
@@ -195,7 +195,7 @@
               <div class="panel-heading">Metrics Visualization Panel</div>
               <div class="panel-body">
                 <p>
-                  <iframe id="grafanaIframe" src="" width="100%" height="50%"></iframe>
+                  <iframe id="grafanaIframe" src="" width="1560" height="500"></iframe>
                 </p>
               </div>
             </div>
